updated French translation
fixed changelog to have 80 chars per line for the latest version

--- a/po/wesnoth-manpages/fr.po
+++ b/po/wesnoth-manpages/fr.po
@@ -1683,9 +1683,9 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:221
 msgid ""
 "B<[user_handler]> Configures the user handler. Available keys vary depending "
-"on which user handler is set with the B<user_handler> key. If no B<"
-"[user_handler]> section is present in the configuration the server will run "
-"without any nick registration service."
+"on which user handler is set with the B<user_handler> key. If no "
+"B<[user_handler]> section is present in the configuration the server will "
+"run without any nick registration service."
 msgstr ""
 "B<[user_handler]> Configure l'identifiant utilisateur. Les options "
 "disponibles dépendent de la configuration de la clé B<user_handler>. S'il "
@@ -1786,8 +1786,8 @@ msgid ""
 msgstr ""
 "(pour user_handler=forum) Nom de la table dans laquelle wesnothd "
 "sauvegardera ses données utilisateurs. Vous devrez créer cette table "
-"manuellement. Exemple : CREATE TABLE E<lt>table-nameE<gt>(username VARCHAR"
-"(255) PRIMARY KEY, user_lastvisit INT UNSIGNED NOT NULL DEFAULT 0, "
+"manuellement. Exemple : CREATE TABLE E<lt>table-nameE<gt>(username "
+"VARCHAR(255) PRIMARY KEY, user_lastvisit INT UNSIGNED NOT NULL DEFAULT 0, "
 "user_is_moderator TINYINT(4) NOT NULL DEFAULT 0);"
 
 # type: TP
