--- a/po/wesnoth-thot/fr.po
+++ b/po/wesnoth-thot/fr.po
@@ -4,17 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth 1.4.2+svn\n"
+"Project-Id-Version: The_Hammer_of_Thursagan-1.12\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-10-27 15:56+0200\n"
-"PO-Revision-Date: 2012-01-02 11:30+0100\n"
+"POT-Creation-Date: 2012-12-08 12:33+0100\n"
+"PO-Revision-Date: 2013-01-12 12:43+0100\n"
 "Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
-"Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
-"Language: \n"
+"Language-Team: French <wesnoth@ml.free.fr>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:10
@@ -1121,12 +1122,6 @@ msgstr ""
 
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:182
-#, fuzzy
-#| msgid ""
-#| "We’re grateful for your assistance. And I’d like to send at least one of "
-#| "our senior apprentices with you to the east. It has come time for them to "
-#| "be journeymen... and I sense something being born to the east that I do "
-#| "not like the feel of."
 msgid ""
 "We’re grateful for your assistance. And I’d like to send a couple of our "
 "senior apprentices with you to the east. It has come time for them to be "
@@ -1140,12 +1135,6 @@ msgstr ""
 
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:187
-#, fuzzy
-#| msgid ""
-#| "We’re grateful for your assistance. And I’d like to send at least one of "
-#| "our senior apprentices with you to the east. It has come time for them to "
-#| "be journeymen... and I sense something being born to the east that I do "
-#| "not like the feel of."
 msgid ""
 "We’re grateful for your assistance. And I’d like to send one of our senior "
 "apprentices with you to the east. It has come time for him to be "
@@ -2648,62 +2637,40 @@ msgstr "inspiration"
 
 #. [leadership]: id=inspire_0
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:14
-#, fuzzy
-#| msgid ""
-#| "Inspire:\n"
-#| "This unit can inspire own L0 or L1 units that are next to it, making them "
-#| "fight better. Adjacent own units of L1 will do 25% more damage; L0 units "
-#| "will do 50% more."
 msgid ""
 "This unit can inspire own L0 or L1 units that are next to it, making them "
 "fight better. Adjacent own units of L1 will do 25% more damage; L0 units "
 "will do 50% more."
 msgstr ""
-"Inspiration :\n"
-"Cette unité peut inspirer les unités alliées présentes à ses côtés, les "
-"rendant meilleures au combat. Les attaques des unités de niveau 0 et 1 "
-"adjacentes et du même camp feront respectivement 50% et 25% de dégâts "
-"supplémentaires."
+"Cette unité peut inspirer les unités alliées de niveau 0 ou 1 présentes à "
+"ses côtés, les rendant meilleures au combat. Les attaques des unités de "
+"niveau 0 et 1 adjacentes et du même camp feront respectivement 50% et 25% de "
+"dégâts supplémentaires."
 
 #. [leadership]: id=inspire_0
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:45
-#, fuzzy
-#| msgid ""
-#| "Inspire:\n"
-#| "This unit can inspire own L0, L1, or L2 units that are next to it, making "
-#| "them fight better. Adjacent own units of L2 will do more 25% more damage; "
-#| "L1 units will do 50% more, and L0 will do 75% more."
 msgid ""
 "This unit can inspire own L0, L1, or L2 units that are next to it, making "
 "them fight better. Adjacent own units of L2 will do more 25% more damage; L1 "
 "units will do 50% more, and L0 will do 75% more."
 msgstr ""
-"Inspiration :\n"
-"Cette unité peut inspirer les unités alliées présentes à ses côtés, les "
-"rendant meilleures au combat. Les attaques des unités de niveau 0, 1 et 2 "
-"adjacentes et du même camp feront respectivement 75%, 50% et 25% de dégâts "
-"supplémentaires."
+"Cette unité peut inspirer les unités alliées de niveau 0, 1 ou 2 présentes à "
+"ses côtés, les rendant meilleures au combat. Les attaques des unités de "
+"niveau 0, 1 et 2 adjacentes et du même camp feront respectivement 75%, 50% "
+"et 25% de dégâts supplémentaires."
 
 #. [leadership]: id=inspire_0
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:88
-#, fuzzy
-#| msgid ""
-#| "Inspire:\n"
-#| "This unit can inspire own L0, L1, L2, or L3 units that are next to it, "
-#| "making them fight better. Adjacent own units of L3 will do more 25% more "
-#| "damage; L2 units will do 50% more, L1 will do 75% more, and L0 units will "
-#| "do 100% more."
 msgid ""
 "This unit can inspire own L0, L1, L2, or L3 units that are next to it, "
 "making them fight better. Adjacent own units of L3 will do more 25% more "
 "damage; L2 units will do 50% more, L1 will do 75% more, and L0 units will do "
 "100% more."
 msgstr ""
-"Inspiration :\n"
-"Cette unité peut inspirer les unités alliées présentes à ses côtés, les "
-"rendant meilleures au combat. Les attaques des unités de niveau 0, 1, 2 et 3 "
-"adjacentes et du même camp feront respectivement 100%, 75%, 50% et 25% de "
-"dégâts supplémentaires."
+"Cette unité peut inspirer les unités alliées de niveau 0, 1, 2 ou 3 "
+"présentes à ses côtés, les rendant meilleures au combat. Les attaques des "
+"unités de niveau 0, 1, 2 et 3 adjacentes et du même camp feront "
+"respectivement 100%, 75%, 50% et 25% de dégâts supplémentaires."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/utils/herodeaths.cfg:9
