--- a/po/wesnoth-aoi/fr.po
+++ b/po/wesnoth-aoi/fr.po
@@ -1,12 +1,12 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: wescamp-i 18n\n"
+"Project-Id-Version: An_Orcish_Incursion-1.12\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-18 09:41+0200\n"
 "PO-Revision-Date: 2011-12-14 21:55+0100\n"
 "Last-Translator: Gérard Bodin <bodin.gnork@gmail.com>\n"
-"Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
-"Language: \n"
+"Language-Team: French <wesnoth@ml.free.fr>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
