--- a/po/wesnoth-dm/fr.po
+++ b/po/wesnoth-dm/fr.po
@@ -3,12 +3,12 @@
 # Guillaume Pascal <guillaume.pascal43@laposte.net>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: wescamp-i 18n\n"
+"Project-Id-Version: Delfadors_Memoirs-1.12\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-12-07 20:59+0100\n"
-"PO-Revision-Date: 2012-11-17 10:23+0100\n"
-"Last-Translator: Guillaume Pascal <guillaume.pascal43@laposte.net>\n"
-"Language-Team: French\n"
+"PO-Revision-Date: 2013-01-12 18:25+0100\n"
+"Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
+"Language-Team: French <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4256,11 +4256,13 @@ msgid ""
 "The killing blow against Iliah-Malal can only be struck by one of your "
 "Undead veterans"
 msgstr ""
+"Le coup fatal contre Iliah-Malal ne peut être porté que par l'un de vos "
+"anciens combattants morts-vivants"
 
 #. [note]
 #: data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg:182
 msgid "The killing blow against Iliah-Malal can only be struck by Delfador"
-msgstr ""
+msgstr "Le coup fatal contre Iliah-Malal ne peut être porté que par Delfador"
 
 #. [message]: speaker=Iliah-Malal
 #: data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg:223
