--- a/po/wesnoth-dw/fr.po
+++ b/po/wesnoth-dw/fr.po
@@ -1,19 +1,18 @@
 # Guillaume Pascal <guillaume.pascal43@laposte.net>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: wescamp-i 18n\n"
+"Project-Id-Version: Dead_Water-1.12\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-10-27 15:56+0200\n"
-"PO-Revision-Date: 2012-04-21 18:01+0100\n"
-"Last-Translator: Gérard Bodin <bodin.gnork@gmail.com>\n"
-"Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
+"POT-Creation-Date: 2012-12-08 12:33+0100\n"
+"PO-Revision-Date: 2013-01-12 11:49+0100\n"
+"Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
+"Language-Team: French <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Virtaal 0.7.0\n"
-"X-Poedit-Language: French\n"
+"X-Generator: Poedit 1.5.4\n"
 
 # Littéralement, la signification diffère :
 # Dead Water = phénomène nautique ralentissant les navires (http://en.wikipedia.org/wiki/Dead_water)
@@ -116,6 +115,8 @@ msgstr "Graphisme"
 #: data/campaigns/Dead_Water/_main.cfg:85
 msgid "stunned: This unit is stunned. It cannot enforce its Zone of Control."
 msgstr ""
+"assommé : Cette unité est assommée. Elle ne peut pas mettre en œuvre sa zone "
+"de contrôle."
 
 #. [scenario]: id=01_Invasion
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:36
@@ -3054,12 +3055,6 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/13_Epilogue.cfg:67
-#, fuzzy
-#| msgid ""
-#| "Cylanna never traveled far again, but stayed in Jotha as a respected "
-#| "elder. She remained a royal advisor, but her main work was healing the "
-#| "sick, and presiding at christenings and weddings. All this agreed with "
-#| "her disposition much better than battling undead."
 msgid ""
 "Cylanna never traveled far again, but stayed in Jotha as a respected elder. "
 "She remained a royal advisor, but her main work was healing the sick, and "
@@ -3440,17 +3435,12 @@ msgstr "assomme"
 
 #. [damage]: id=tail_stun
 #: data/campaigns/Dead_Water/utils/specials.cfg:10
-#, fuzzy
-#| msgid ""
-#| "This attack hits so hard that the defender is dazed and can no longer "
-#| "enforce a zone of control. The effect wears off on the defender’s next "
-#| "turn."
 msgid ""
 "This attack hits so hard that the opponent is dazed and can no longer "
 "enforce a zone of control. The effect wears off on the opponent’s next turn."
 msgstr ""
-"Cette attaque frappe si fort qu'elle étourdit le défenseur qui perd sa zone "
-"de contrôle. L'effet cesse au prochain tour du défenseur."
+"Cette attaque frappe si fort qu'elle étourdit l'adversaire qui perd sa zone "
+"de contrôle. L'effet cesse au prochain tour de l'adversaire."
 
 #~ msgid "You receive 200 gold."
 #~ msgstr "Vous gagnez 200 pièces d'or."
