--- a/po/wesnoth-editor/fr.po
+++ b/po/wesnoth-editor/fr.po
@@ -8,17 +8,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth 0.8.4-CVS\n"
+"Project-Id-Version: Wesnoth_Editor-1.12\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-10-27 15:56+0200\n"
-"PO-Revision-Date: 2011-11-26 10:01+0100\n"
-"Last-Translator: Guillaume Pascal <guillaume.pascal43@laposte.net>\n"
-"Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
-"Language: \n"
+"POT-Creation-Date: 2012-12-08 12:33+0100\n"
+"PO-Revision-Date: 2013-01-12 08:12+0100\n"
+"Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
+"Language-Team: French <wesnoth@ml.free.fr>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #. [brush]
 #: data/core/editor/brushes.cfg:5
@@ -42,10 +43,8 @@ msgstr "Ligne d'hexagones NO-SE"
 
 #. [brush]
 #: data/core/editor/brushes.cfg:62
-#, fuzzy
-#| msgid "Hex Line NW-SE"
 msgid "Hex Line SE-NW"
-msgstr "Ligne d'hexagones NO-SE"
+msgstr "Ligne d'hexagones SE-NW"
 
 #. [editor_group]: id=all
 #: data/core/editor/terrain-groups.cfg:11
@@ -80,7 +79,7 @@ msgstr "forêt"
 #. [editor_group]: id=fall
 #: data/core/editor/terrain-groups.cfg:52
 msgid "fall"
-msgstr ""
+msgstr "automne"
 
 #. [editor_group]: id=frozen
 #: data/core/editor/terrain-groups.cfg:59
@@ -191,7 +190,7 @@ msgstr "Fenêtre"
 #. [menu]: id=menu-editor-terrain
 #: data/themes/editor.cfg:439
 msgid "Group"
-msgstr ""
+msgstr "Groupe"
 
 #. [label]: id=villages-icon
 #: data/themes/editor.cfg:463
@@ -347,7 +346,7 @@ msgstr "Impossible de sauvegarder la carte : $msg"
 
 #: src/editor/palette/editor_palettes.cpp:48
 msgid "(Unknown Group)"
-msgstr ""
+msgstr "(Groupe inconnu)"
 
 #: src/editor/palette/editor_palettes.cpp:305
 msgid "(non-core)"
@@ -377,7 +376,6 @@ msgstr "Joueur $player_number"
 msgid "Custom setting"
 msgstr "Réglages personnalisés"
 
-#, fuzzy
 #~| msgid "Action not implemented"
 #~ msgid "Flip Map - Not implemented yet."
 #~ msgstr "Action non implémentée"
