--- a/po/wesnoth-l/fr.po
+++ b/po/wesnoth-l/fr.po
@@ -1,18 +1,18 @@
 # Guillaume Pascal <guillaume.pascal43@laposte.net>, 2011, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: wesnoth 1.6\n"
+"Project-Id-Version: Liberty-1.12\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2012-01-21 12:43+0200\n"
-"Last-Translator: Guillaume Pascal <guillaume.pascal43@laposte.net>\n"
-"Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
+"PO-Revision-Date: 2013-01-12 13:44+0100\n"
+"Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
+"Language-Team: French <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Virtaal 0.7.0\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #. [campaign]: id=Liberty
 #. Yes, that is "marchlanders", not "marshlanders".
@@ -1058,6 +1058,8 @@ msgstr ""
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:324
 msgid "Could not convert a $stored_changers[$i].type, please report!"
 msgstr ""
+"Impossible de convertir un $stored_changers[$i].type, s'il vous plaît "
+"signalez-le !"
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:590
