--- a/po/wesnoth-nr/fr.po
+++ b/po/wesnoth-nr/fr.po
@@ -1,17 +1,17 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: fr\n"
+"Project-Id-Version: Northern_Rebirth-1.12\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2012-01-29 19:42+0100\n"
+"POT-Creation-Date: 2012-12-08 12:33+0100\n"
+"PO-Revision-Date: 2013-01-12 13:20+0100\n"
 "Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
-"Language-Team: Traduction française <wesnoth@ml.free.fr>\n"
-"Language: \n"
+"Language-Team: French <wesnoth@ml.free.fr>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:9
@@ -936,10 +936,8 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:292
-#, fuzzy
-#| msgid "... Uh ok!"
 msgid "... Uh, sure!"
-msgstr ".... bon d'accord !"
+msgstr "... Euh, bien sûr !"
 
 #. [message]: speaker=Camerin
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:296
@@ -968,10 +966,8 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:309
-#, fuzzy
-#| msgid "Er... ok..."
 msgid "Er... let’s go..."
-msgstr "Euh... d'accord..."
+msgstr "Euh... allons-y..."
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:313
