--- a/po/wesnoth-trow/fr.po
+++ b/po/wesnoth-trow/fr.po
@@ -7,18 +7,18 @@
 # Guillaume Pascal <guillaume.pascal43@laposte.net>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth\n"
+"Project-Id-Version: The_Rise_of_Wesnoth-1.12\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-12-07 20:59+0100\n"
-"PO-Revision-Date: 2012-01-08 18:27+0200\n"
-"Last-Translator: Guillaume Pascal <guillaume.pascal43@laposte.net>\n"
-"Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
+"POT-Creation-Date: 2012-12-08 12:33+0100\n"
+"PO-Revision-Date: 2013-01-12 12:27+0100\n"
+"Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
+"Language-Team: French <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Virtaal 0.7.0\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #. [campaign]: id=The_Rise_of_Wesnoth
 #. [scenario]: id=22_The_Rise_of_Wesnoth
@@ -2804,17 +2804,13 @@ msgstr ""
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/09_Fallen_Lich_Point.cfg:264
-#, fuzzy
-#| msgid ""
-#| "Okay. Let’s un-petrify that lich and take his book, then get into the "
-#| "sewers. Umm, what language would that book be in?"
 msgid ""
 "Well, let’s un-petrify that lich and take his book, then get into the "
 "sewers. Umm, what language would that book be in?"
 msgstr ""
-"Très bien. Allons dépétrifier cette liche et lui prendre son livre, puis "
-"nous prendrons la route des égouts. Hum... dans quelle langue ce livre peut-"
-"il bien être écrit ?"
+"Eh bien. Allons dépétrifier cette liche et lui prendre son livre, puis nous "
+"prendrons la route des égouts. Hum... dans quelle langue ce livre peut-il "
+"bien être écrit ?"
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/09_Fallen_Lich_Point.cfg:268
@@ -4257,10 +4253,6 @@ msgstr "Attendez, je vois un navire. Plusieurs navires. Nous sommes envahis !"
 
 #. [message]: speaker=Dursil
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg:143
-#, fuzzy
-#| msgid ""
-#| "Umm, we’re being invaded? Okay, we’ll sort out our differences later. "
-#| "Let’s get them first."
 msgid ""
 "Umm, we’re being invaded? Fine, we’ll sort out our differences later. Let’s "
 "get them first."
@@ -7108,14 +7100,6 @@ msgstr "Dame Wesfolk"
 #. [unit_type]: id=Wesfolk Leader, race=human
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wesfolk_Lady.cfg:22
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wesfolk_Leader.cfg:23
-#, fuzzy
-#| msgid ""
-#| "Born in the Wesfolk aristocracy, she and her people were excluded from "
-#| "society by their lords, who betrayed their loyalty when a war against "
-#| "Haldric’s people was being lost. This outcast still conserves her "
-#| "nobleness in her veins and in the battlefield she has earned valuable "
-#| "experience, which continues increasing with time, as does her natural "
-#| "leadership."
 msgid ""
 "Born in the Wesfolk aristocracy, she and her people were excluded from "
 "society by their lords, who betrayed their loyalty when a war against "
@@ -7156,14 +7140,6 @@ msgstr "Paria Wesfolk"
 
 #. [unit_type]: id=Wesfolk Outcast, race=human
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wesfolk_Outcast.cfg:22
-#, fuzzy
-#| msgid ""
-#| "Born in the Wesfolk aristocracy, she and her people were excluded from "
-#| "society by their lords, who betrayed their loyalty when a war against "
-#| "Haldric’s people was being lost. This outcast still conserves her "
-#| "nobleness in her veins and in the battlefield she has earned valuable "
-#| "experience, which she can lend to her people for turning a fight in their "
-#| "favor."
 msgid ""
 "Born in the Wesfolk aristocracy, she and her people were excluded from "
 "society by their lords, who betrayed their loyalty when a war against "
@@ -7221,16 +7197,10 @@ msgstr "distraction"
 
 #. [skirmisher]: id=distract
 #: data/campaigns/The_Rise_Of_Wesnoth/utils/trow-abilities.cfg:7
-#, fuzzy
-#| msgid ""
-#| "Distract:\n"
-#| "This unit negates enemy Zones of Control around itself for allied units "
-#| "(but not for itself)."
 msgid ""
 "This unit negates enemy Zones of Control around itself for allied units (but "
 "not for itself)."
 msgstr ""
-"Distraction :\n"
 "Cette unité annule les zones de contrôle pouvant bloquer ses alliés (l'unité "
 "reste, elle, soumise aux ZdC)."
 
