updated French translation fixed changelog to have 80 chars per line for the latest version

--- a/po/wesnoth-httt/fr.po
+++ b/po/wesnoth-httt/fr.po
@@ -6,17 +6,18 @@
 # Guillaume Pascal <guillaume.pascal43@laposte.net>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth\n"
+"Project-Id-Version: Heir_To_The_Throne-1.12\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-10-27 16:01+0200\n"
-"PO-Revision-Date: 2011-12-10 09:42+0200\n"
-"Last-Translator: Guillaume Pascal <guillaume.pascal43@laposte.net>\n"
-"Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
+"POT-Creation-Date: 2012-11-17 13:12+0100\n"
+"PO-Revision-Date: 2013-01-12 14:10+0100\n"
+"Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
+"Language-Team: French <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #. [campaign]: id=Heir_To_The_Throne
 #: data/campaigns/Heir_To_The_Throne/_main.cfg:11
@@ -7049,12 +7050,16 @@ msgstr ""
 
 #. [message]: speaker=Parandra
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:155
+#, fuzzy
+#| msgid ""
+#| "Princess, when Delfador the Great speaks of the Queen Dowager, Asheviere, "
+#| "ordering the princes of Wesnoth to be put to death, he speaks the truth."
 msgid ""
 "Princess, when Delfador the Great speaks of the Queen Mother, Asheviere, "
 "ordering the princes of Wesnoth to be put to death, he speaks the truth."
 msgstr ""
-"Princesse, Delfador vous raconte la stricte vérité. Votre mère Asheviere a "
-"bien commandité l'exécution des princes de Wesnoth."
+"Princesse, Delfador vous raconte la stricte vérité. La reine douairière, "
+"Asheviere, a bien commandité l'exécution des princes de Wesnoth."
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:159
@@ -7076,6 +7081,12 @@ msgstr ""
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:173
+#, fuzzy
+#| msgid ""
+#| "Well, that is why I must take the Sceptre. I will return, and people will "
+#| "accept me as Queen. I will rule justly and fairly. My mother is only "
+#| "Queen Dowager. The throne is rightfully mine, and with the Sceptre I can "
+#| "prove it."
 msgid ""
 "Well, that is why I must take the Sceptre. I will return, and people will "
 "accept me as Queen. I will rule justly and fairly. My mother is only Queen "
@@ -7083,8 +7094,8 @@ msgid ""
 msgstr ""
 "C'est pourquoi je dois obtenir le Sceptre. Je reviendrai et les gens "
 "m'accepteront comme reine. Je régnerai de façon juste et équitable. Ma mère "
-"est seulement la reine mère. Je suis l'héritière légitime du trône et je "
-"pourrai le prouver avec le Sceptre."
+"est seulement la reine douairière. Je suis l'héritière légitime du trône et "
+"je pourrai le prouver avec le Sceptre."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:177
@@ -7097,6 +7108,12 @@ msgstr ""
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:183
+#, fuzzy
+#| msgid ""
+#| "Well, I have the Sceptre! I will return and the people will accept me as "
+#| "Queen! My mother is only Queen Dowager. The Throne is rightfully mine, "
+#| "and I will rule from it with justice and fairness. I may even accept you "
+#| "as my adviser and counselor, Delfador."
 msgid ""
 "Well, I have the Sceptre! I will return and the people will accept me as "
 "Queen! My mother is only Queen Mother. The Throne is rightfully mine, and I "
@@ -7104,9 +7121,9 @@ msgid ""
 "adviser and counselor, Delfador."
 msgstr ""
 "Eh bien, j'ai le Sceptre ! Je vais revenir et les gens m'accepteront comme "
-"reine ! Ma mère est seulement la reine mère.  Je suis l'héritière légitime "
-"du trône, je régnerai avec justice et équité. Vous pourriez même me servir "
-"de mentor et de conseiller, Delfador."
+"reine ! Ma mère est seulement la reine douairière. Je suis l'héritière "
+"légitime du trône, je régnerai avec justice et équité. Vous pourriez même me "
+"servir de mentor et de conseiller, Delfador."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:187
@@ -8330,15 +8347,19 @@ msgstr "Reine des ténèbres"
 
 #. [unit_type]: id=Dark Queen, race=human
 #: data/campaigns/Heir_To_The_Throne/units/Dark_Queen.cfg:19
+#, fuzzy
+#| msgid ""
+#| "The evil queen Asheviere has terrorized Wesnoth for many years. Her "
+#| "knowledge of magic makes her a worthy foe in combat, although her power "
+#| "is mostly derived from those she commands."
 msgid ""
 "The evil queen mother Asheviere has terrorized Wesnoth for many years. Her "
 "knowledge of magic makes her a worthy foe in combat, although her power is "
 "mostly derived from those she commands."
 msgstr ""
-"Asheviere, la reine mère diabolique, a terrorisé Wesnoth depuis de "
-"nombreuses années. Ses connaissances de la magie en font un redoutable "
-"adversaire en combat mais sa véritable puissance réside dans les troupes "
-"qu'elle commande."
+"Asheviere, la reine diabolique, a terrorisé Wesnoth depuis de nombreuses "
+"années. Ses connaissances de la magie en font un redoutable adversaire en "
+"combat mais sa véritable puissance réside dans les troupes qu'elle commande."
 
 #. [attack]: type=impact
 #: data/campaigns/Heir_To_The_Throne/units/Dark_Queen.cfg:23
@@ -8812,8 +8833,8 @@ msgstr ""
 
 #~ msgid ""
 #~ "<span color='white'>Alternative objective:</span>\n"
-#~ "<span color='green'>Defeat the enemy leader</span> <small>(special bonus)"
-#~ "</small>"
+#~ "<span color='green'>Defeat the enemy leader</span> <small>(special "
+#~ "bonus)</small>"
 #~ msgstr ""
 #~ "<span color='white'>Objectif alternatif :</span>\n"
 #~ "<span color='green'>Vaincre le chef ennemi</span> <small>(bonus spécial)</"
@@ -8839,8 +8860,8 @@ msgstr ""
 
 #~ msgid ""
 #~ "<span color='white'>Alternative objective:</span>\n"
-#~ "<span color='green'>Defeat all enemy leaders</span> <small>(special bonus)"
-#~ "</small>"
+#~ "<span color='green'>Defeat all enemy leaders</span> <small>(special "
+#~ "bonus)</small>"
 #~ msgstr ""
 #~ "<span color='white'>Objectif alternatif :</span>\n"
 #~ "<span color='green'>Vaincre tous les chefs ennemis</span> <small>(bonus "
