--- a/po/wesnoth-thot/fr.po
+++ b/po/wesnoth-thot/fr.po
@@ -4,17 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth 1.4.2+svn\n"
+"Project-Id-Version: The_Hammer_of_Thursagan-1.12\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2012-01-02 11:30+0100\n"
+"POT-Creation-Date: 2012-11-17 13:12+0100\n"
+"PO-Revision-Date: 2013-01-12 12:43+0100\n"
 "Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
-"Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
-"Language: \n"
+"Language-Team: French <wesnoth@ml.free.fr>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:10
@@ -1121,6 +1122,12 @@ msgstr ""
 
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:181
+#, fuzzy
+#| msgid ""
+#| "We’re grateful for your assistance. And I’d like to send a couple of our "
+#| "senior apprentices with you to the east. It has come time for them to be "
+#| "journeymen... and I sense something being born to the east that I do not "
+#| "like the feel of."
 msgid ""
 "We’re grateful for your assistance. And I’d like to send at least one of our "
 "senior apprentices with you to the east. It has come time for them to be "
@@ -2623,34 +2630,48 @@ msgstr "inspiration"
 
 #. [leadership]: id=inspire_0
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:15
+#, fuzzy
+#| msgid ""
+#| "This unit can inspire own L0 or L1 units that are next to it, making them "
+#| "fight better. Adjacent own units of L1 will do 25% more damage; L0 units "
+#| "will do 50% more."
 msgid ""
 "Inspire:\n"
 "This unit can inspire own L0 or L1 units that are next to it, making them "
 "fight better. Adjacent own units of L1 will do 25% more damage; L0 units "
 "will do 50% more."
 msgstr ""
-"Inspiration :\n"
-"Cette unité peut inspirer les unités alliées présentes à ses côtés, les "
-"rendant meilleures au combat. Les attaques des unités de niveau 0 et 1 "
-"adjacentes et du même camp feront respectivement 50% et 25% de dégâts "
-"supplémentaires."
+"Cette unité peut inspirer les unités alliées de niveau 0 ou 1 présentes à "
+"ses côtés, les rendant meilleures au combat. Les attaques des unités de "
+"niveau 0 et 1 adjacentes et du même camp feront respectivement 50% et 25% de "
+"dégâts supplémentaires."
 
 #. [leadership]: id=inspire_0
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:47
+#, fuzzy
+#| msgid ""
+#| "This unit can inspire own L0, L1, or L2 units that are next to it, making "
+#| "them fight better. Adjacent own units of L2 will do more 25% more damage; "
+#| "L1 units will do 50% more, and L0 will do 75% more."
 msgid ""
 "Inspire:\n"
 "This unit can inspire own L0, L1, or L2 units that are next to it, making "
 "them fight better. Adjacent own units of L2 will do more 25% more damage; L1 "
 "units will do 50% more, and L0 will do 75% more."
 msgstr ""
-"Inspiration :\n"
-"Cette unité peut inspirer les unités alliées présentes à ses côtés, les "
-"rendant meilleures au combat. Les attaques des unités de niveau 0, 1 et 2 "
-"adjacentes et du même camp feront respectivement 75%, 50% et 25% de dégâts "
-"supplémentaires."
+"Cette unité peut inspirer les unités alliées de niveau 0, 1 ou 2 présentes à "
+"ses côtés, les rendant meilleures au combat. Les attaques des unités de "
+"niveau 0, 1 et 2 adjacentes et du même camp feront respectivement 75%, 50% "
+"et 25% de dégâts supplémentaires."
 
 #. [leadership]: id=inspire_0
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:91
+#, fuzzy
+#| msgid ""
+#| "This unit can inspire own L0, L1, L2, or L3 units that are next to it, "
+#| "making them fight better. Adjacent own units of L3 will do more 25% more "
+#| "damage; L2 units will do 50% more, L1 will do 75% more, and L0 units will "
+#| "do 100% more."
 msgid ""
 "Inspire:\n"
 "This unit can inspire own L0, L1, L2, or L3 units that are next to it, "
@@ -2658,11 +2679,10 @@ msgid ""
 "damage; L2 units will do 50% more, L1 will do 75% more, and L0 units will do "
 "100% more."
 msgstr ""
-"Inspiration :\n"
-"Cette unité peut inspirer les unités alliées présentes à ses côtés, les "
-"rendant meilleures au combat. Les attaques des unités de niveau 0, 1, 2 et 3 "
-"adjacentes et du même camp feront respectivement 100%, 75%, 50% et 25% de "
-"dégâts supplémentaires."
+"Cette unité peut inspirer les unités alliées de niveau 0, 1, 2 ou 3 "
+"présentes à ses côtés, les rendant meilleures au combat. Les attaques des "
+"unités de niveau 0, 1, 2 et 3 adjacentes et du même camp feront "
+"respectivement 100%, 75%, 50% et 25% de dégâts supplémentaires."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/utils/herodeaths.cfg:9
@@ -2720,6 +2740,22 @@ msgid ""
 "darkness!"
 msgstr ""
 "Aaarrgh ! Je meurs, mais le feu vertueux vous enverra dans les ténèbres !"
+
+#~| msgid ""
+#~| "We’re grateful for your assistance. And I’d like to send at least one of "
+#~| "our senior apprentices with you to the east. It has come time for them "
+#~| "to be journeymen... and I sense something being born to the east that I "
+#~| "do not like the feel of."
+#~ msgid ""
+#~ "We’re grateful for your assistance. And I’d like to send one of our "
+#~ "senior apprentices with you to the east. It has come time for him to be "
+#~ "journeyman... and I sense something being born to the east that I do not "
+#~ "like the feel of."
+#~ msgstr ""
+#~ "Nous vous sommes reconnaissants pour l'aide que vous nous avez apportée. "
+#~ "J'aimerais envoyer au moins un de nos apprentis les plus matures avec "
+#~ "vous. Il est temps pour eux de voyager... À ce propos, j'ai l'impression "
+#~ "qu'une invocation réveille quelque chose à l'est et je n'aime pas ça."
 
 #~ msgid "Dwarvish Runemaster"
 #~ msgstr "Maître des runes nain"
