--- a/po/wesnoth-low/fr.po
+++ b/po/wesnoth-low/fr.po
@@ -1,18 +1,18 @@
 # Guillaume Pascal <guillaume.pascal43@laposte.net>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: wescamp-i 18n\n"
+"Project-Id-Version: Legend_of_Wesmere-1.12\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2012-03-25 14:50+0100\n"
+"POT-Creation-Date: 2012-11-17 13:12+0100\n"
+"PO-Revision-Date: 2013-01-12 13:32+0100\n"
 "Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
-"Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
+"Language-Team: French <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Virtaal 0.7.0\n"
+"X-Generator: Poedit 1.5.4\n"
 
 # Abv : Légende de Wesmer
 #. [campaign]: id=LOW
@@ -1876,8 +1876,8 @@ msgstr "Grubr"
 #. [objective]: condition=win
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:425
 msgid ""
-"You must own the field and be capable of overwhelming your opponents. (Player"
-"(s) own more than 25 units while the foes’ numbers fell below 15)"
+"You must own the field and be capable of overwhelming your opponents. "
+"(Player(s) own more than 25 units while the foes’ numbers fell below 15)"
 msgstr ""
 "Vous devez dominer le terrain et être en mesure de submerger vos "
 "adversaires. (Le(s) joueur(s) a (ont) plus de 25 unités tandis que le nombre "
@@ -5612,13 +5612,17 @@ msgstr "exaltation de Kalenz"
 
 #. [leadership]: id=elates_kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/abilities.cfg:15
+#, fuzzy
+#| msgid ""
+#| "Through the special bond between Kalenz and Cleodil, she elates him to "
+#| "fight better.\n"
+#| "Adjacent to Cleodil, Kalenz will do 25% more damage in battle."
 msgid ""
 "elates Kalenz:\n"
 "Through the special bond between Kalenz and Cleodil, she elates him to fight "
 "better.\n"
 "Adjacent to Cleodil, Kalenz will do 25% more damage in battle."
 msgstr ""
-"exaltation de Kalenz :\n"
 "Grâce au lien spécial qui les unit, Cléodil exalte Kalenz au combat.\n"
 "À ses côtés, Kalenz infligera 25 % de dégâts supplémentaires pendant la "
 "bataille."
@@ -5635,13 +5639,17 @@ msgstr "soins pour Kalenz +4"
 
 #. [heals]: id=heals_kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/abilities.cfg:38
+#, fuzzy
+#| msgid ""
+#| "If a shyde has developed a special bond to a person her healing abilities "
+#| "increase for him.  This allows Cleodil to give Kalenz extra points of "
+#| "healing at the beginning of your turn."
 msgid ""
 "heals +4:\n"
 "If a shyde has developed a special bond to a person her healing abilities "
 "increase for him.  This allows Cleodil to give Kalenz extra points of "
 "healing at the beginning of your turn."
 msgstr ""
-"soins +4 :\n"
 "Si une nymphe a développé un lien spécial avec quelqu'un, ses capacités de "
 "guérison augmentent pour lui. Cela permet à Cléodil de donner des points "
 "supplémentaires de guérison à Kalenz au début de votre tour."
