updated Italian translation

--- a/po/wesnoth-low/it.po
+++ b/po/wesnoth-low/it.po
@@ -1873,8 +1873,8 @@ msgstr "Grubr"
 #. [objective]: condition=win
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:425
 msgid ""
-"You must own the field and be capable of overwhelming your opponents. (Player"
-"(s) own more than 25 units while the foes’ numbers fell below 15)"
+"You must own the field and be capable of overwhelming your opponents. "
+"(Player(s) own more than 25 units while the foes’ numbers fell below 15)"
 msgstr ""
 "Devi possedere il campo di battaglia ed essere in grado di soverchiare i "
 "tuoi opponenti. (Il giocatore/I giocatori possiedono più di 25 unità mentre "
