--- a/po/wesnoth-manpages/it.po
+++ b/po/wesnoth-manpages/it.po
@@ -1515,8 +1515,8 @@ msgstr ""
 "disponibili sono B<forum> (per connettere wesnothd ad un forum con database "
 "phpbb) e  B<sample> (una implementazione di esempio di una interfaccia user "
 "handler; Usarla per qualcosa di real è semplicemente una cosa da pazzi). il "
-"valore di default è B<forum>. Va anche aggiunto una sezione B<[user_handler]"
-">, vedi sotto."
+"valore di default è B<forum>. Va anche aggiunto una sezione "
+"B<[user_handler]>, vedi sotto."
 
 # type: SS
 #. type: SS
@@ -1618,12 +1618,12 @@ msgid ""
 "Example: B<time=\"1D12h30m\"> results in a ban time of 1 day, 12 hours and "
 "30 minutes."
 msgstr ""
-"Definizione del formato per la rappresentazione del periodo. Il formato è %d"
-"[%s[%d%s[...]]] dove %s sono s (secondi), m (minuti), h (ore), D (giorni), M "
-"(mesi) o Y (anni) e %d è un numero. Se non vengono specificati modificatori "
-"ri tempo, il valore si assume essere espresso in minuti (m). Ad esempio: "
-"B<time=\"1D12h30m\"> ha come risultato un periodo di messa al bando di 1 "
-"giorno, 12 ore e 30 minutei."
+"Definizione del formato per la rappresentazione del periodo. Il formato è "
+"%d[%s[%d%s[...]]] dove %s sono s (secondi), m (minuti), h (ore), D (giorni), "
+"M (mesi) o Y (anni) e %d è un numero. Se non vengono specificati "
+"modificatori ri tempo, il valore si assume essere espresso in minuti (m). Ad "
+"esempio: B<time=\"1D12h30m\"> ha come risultato un periodo di messa al bando "
+"di 1 giorno, 12 ore e 30 minutei."
 
 # type: Plain text
 #. type: Plain text
@@ -1642,9 +1642,9 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:221
 msgid ""
 "B<[user_handler]> Configures the user handler. Available keys vary depending "
-"on which user handler is set with the B<user_handler> key. If no B<"
-"[user_handler]> section is present in the configuration the server will run "
-"without any nick registration service."
+"on which user handler is set with the B<user_handler> key. If no "
+"B<[user_handler]> section is present in the configuration the server will "
+"run without any nick registration service."
 msgstr ""
 "B<[user_handler]> Configura lo user handler. Diverse parole chiavi sono "
 "disponibili a seconda dello user handler selezionato con la chiave "
