--- a/po/wesnoth/it.po
+++ b/po/wesnoth/it.po
@@ -2523,8 +2523,8 @@ msgstr ""
 msgid ""
 "<i>― Royal Compendium of Battle Terminology: Volume II (reprinted 221YW)</i>"
 msgstr ""
-"<i>― Compendio reale di terminologia di battaglia: Volume II (ristampa 221AW)"
-"</i>"
+"<i>― Compendio reale di terminologia di battaglia: Volume II (ristampa "
+"221AW)</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:48
