German Translation: small fix in SoF
[ci skip]

--- a/po/wesnoth-sof/de.po
+++ b/po/wesnoth-sof/de.po
@@ -3087,7 +3087,7 @@ msgstr "Rolin"
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:273
 msgid "We will certainly help any warrior of Wesnoth who needs our help!"
 msgstr ""
-"Wir werden jedem Streiter von Wesnoth unterstützen, der unserer Hilfe bedarf!"
+"Wir werden jeden Streiter von Wesnoth unterstützen, der unserer Hilfe bedarf!"
 
 #. [unit]: type=Lieutenant, id=Hadlin   # wmllint: ignore
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:330
