--- a/po/wesnoth-help/en_GB.po
+++ b/po/wesnoth-help/en_GB.po
@@ -1946,7 +1946,7 @@ msgstr ""
 "The hit-points are also indicated by an energy bar next to each unit, which "
 "is green, yellow or red. A unit with at least 1 experience point has a blue "
 "experience bar, which turns white as the unit is about to "
-"<ref>dst='experience_and_advancement' text='advance'</ref>."
+"<ref>dst='advancement' text='advance'</ref>."
 
 #. [topic]: id=advancement
 #: data/core/help.cfg:244
