Bring German translation in sync with 1.14
[ci skip]

--- a/po/wesnoth-manual/de.po
+++ b/po/wesnoth-manual/de.po
@@ -1,6 +1,6 @@
 # Translators:
 #  Nils Kneuper <crazy-ivanovic@gmx.net>, 2007 - 2010
-#  Gerfried Fuchs <rhonda@deb.at>, 2008 - 2011
+#  Rhonda D'Vine <rhonda@deb.at>, 2008 - 2011
 #  Mark de Wever <koraq@xs4all.nl>, 2009 - 2010
 #  Aaron Winter <winter.aaron93@gmail.com>, 2018
 #
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.14\n"
 "POT-Creation-Date: 2018-03-27 04:20+0300\n"
-"PO-Revision-Date: 2018-05-03 14:05+0200\n"
+"PO-Revision-Date: 2018-08-20 05:55+0200\n"
 "Last-Translator: Aaron Winter <winter.aaron93@gmail.com>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: de_DE\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.1.1\n"
 
 # type: Attribute 'lang' of: <book>
 #. type: Attribute 'lang' of: <book>
@@ -314,13 +314,13 @@ msgid ""
 "sar, learning from the Elder Mage Delfador — pay attention or he might turn "
 "you into a newt."
 msgstr ""
-"Die Einführung ist ein echtes aber einfaches Spiel, das einige der Grundzüge "
-"vermittelt, die Ihr im Spiel benötigen werdet. Gewinnen oder verlieren ist "
-"hier nicht wichtig. Euch soll hier vermittelt werden, wie die grundlegenden "
-"Spielelemente funktionieren. Klickt auf den »Einführung«-Knopf, um sie zu "
-"spielen. In der Einführung schlüpft Ihr in die Rolle Prinz Konrads oder "
-"Prinzessin Li&#8217;sars und lernt vom alten Magier Delfador – passt gut auf "
-"oder er verwandelt Euch in einen Molch."
+"Die Einführung ist ein richtiges aber einfaches Gefecht, das einige der "
+"Grundzüge vermittelt, die Ihr im Spiel benötigen werdet. Gewinnen oder "
+"verlieren ist hier nicht wichtig. Euch soll hier vermittelt werden, wie die "
+"grundlegenden Spielelemente funktionieren. Klickt auf den »Einführung«-"
+"Knopf, um sie zu spielen. In der Einführung schlüpft Ihr in die Rolle Prinz "
+"Konrads oder Prinzessin Li&#8217;sars und lernt vom alten Magier Delfador – "
+"passt gut auf oder er verwandelt Euch in einen Molch."
 
 # type: Content of: <book><chapter><section><variablelist><varlistentry><term>
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
@@ -571,7 +571,7 @@ msgid ""
 "Click this button to view game version and technical information. It may be "
 "useful when troubleshooting issues."
 msgstr ""
-"Klicke diesen Schalter um die Spielversion und technische Informationen "
+"Klickt diesen Schalter um die Spielversion und technische Informationen "
 "anzuzeigen. Die dort einsehbaren Informationen sind hilfreich falls Fehler "
 "im Spiel auftreten."
 
@@ -742,7 +742,7 @@ msgid ""
 "password box will pop up if a password is required for the current username. "
 "You cannot use a registered name without the password."
 msgstr ""
-"Dies ist Ihr Name auf dem Mehrspieler Server. Wenn Ihr einen Account im "
+"Dies ist Euer Name auf dem Mehrspieler Server. Wenn Ihr einen Account im "
 "<ulink url=\"https://forums.wesnoth.org/\">Wesnoth Forum</ulink> habt, so "
 "könnt Ihr den Nutzernamen und das zugehörige Passwort benutzen, um mit "
 "diesen Daten den Server zu betreten. Wählt Ihr einen bereits registrierten "
@@ -1306,11 +1306,11 @@ msgid ""
 "instead of the control key when you are using MacOSX. You can change most "
 "hotkeys to your taste using the Preferences menu."
 msgstr ""
-"Hier handelt es sich um die Standard-Tastenkürzel. Die Tastaturbelegung kann "
-"abhängig von der verwendeten Plattform unterschiedlich sein. Zum Beispiel "
-"werden Sie häufig die Befehlstaste statt der Steuertaste verwenden müssen, "
-"wenn Sie MacOSX verwenden. Sie können die meisten Tastenkürzel im "
-"Einstellungsmenü an Ihre Vorlieben anpassen."
+"Hierbei handelt es sich um die Standard-Tastenkürzel. Die Tastaturbelegung "
+"kann abhängig von der verwendeten Plattform unterschiedlich sein. Zum "
+"Beispiel werdet Ihr häufig die Befehlstaste statt der Steuertaste verwenden "
+"müssen, wenn Ihr MacOSX verwendet. Ihr könnt die meisten Tastenkürzel im "
+"Einstellungsmenü an Eure Vorlieben anpassen."
 
 # type: Content of: <book><chapter><section><table><title>
 #. type: Content of: <book><chapter><section><table><title>
