--- a/po/wesnoth-aoi/de.po
+++ b/po/wesnoth-aoi/de.po
@@ -5,9 +5,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.12\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2018-05-26 12:04 UTC\n"
-"PO-Revision-Date: 2018-06-04 01:58+0200\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
+"POT-Creation-Date: 2018-09-09 08:37 UTC\n"
+"PO-Revision-Date: 2018-09-13 18:16+0200\n"
 "Last-Translator: German translation team <irc://irc.freenode.net/#wesnoth-"
 "de>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.7\n"
+"X-Generator: Poedit 2.1.1\n"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:11
@@ -87,7 +87,7 @@ msgstr "Anpassung für Mainline"
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:50
 msgid "Post 1.4 story and gameplay improvements"
-msgstr "Verbesserungen von Geschichte und Spielbarkeit (nach Version 1.4)"
+msgstr "Verbesserungen der Geschichte und Spielbarkeit (nach Version 1.4)"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:56
@@ -182,10 +182,10 @@ msgid "Lomarfel"
 msgstr "Lomarfel"
 
 #. [side]: type=Orcish Warrior, id=Urugha
-#. [side]: type=Orcish Warlord, id=Gnargha
 #. [side]: type=Orcish Warlord, id=Krughnar
 #. [side]: type=Orcish Sovereign, id=Rualsha
 #. [side]: type=Orcish Slayer, id=Gharlsa
+#. [side]: type=Orcish Warlord, id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:88
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:59
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:66
@@ -713,8 +713,8 @@ msgstr ""
 #. [message]: role=advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:265
 msgid ""
-"What about the loot lord? We found supplies worth over a hundred gold in the "
-"camp."
+"What about the loot, lord? We found supplies worth over a hundred gold in "
+"the camp."
 msgstr ""
 "Was ist mit den Besitztümern der Orks? Wir haben Vorräte im Wert von über "
 "100 Goldmünzen in ihrem Lager gefunden."
@@ -749,7 +749,7 @@ msgstr ""
 
 #. [message]: role=advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:320
-msgid "We can’t carry on Lord, the men are too tired. We have to fall back."
+msgid "We can’t carry on, lord, the men are too tired. We have to fall back."
 msgstr ""
 "Die Männer sind müde, mein Fürst. In diesem Zustand können wir den Kampf "
 "nicht weiterführen. Wir müssen uns zurückziehen."
