--- a/po/wesnoth-multiplayer/de.po
+++ b/po/wesnoth-multiplayer/de.po
@@ -1,7 +1,7 @@
 # Translators:
 #  Andre Schmidt <andre@schmidtandre.de>, 2004 - 2005
 #  Boris Stumm <wesnoth@bstumm.de>, 2005
-#  Gerfried Fuchs <rhonda@deb.at>, 2005 - 2006, 2010
+#  Rhonda D'Vine <rhonda@deb.at>, 2005 - 2006, 2010
 #  Nils Kneuper <crazy-ivanovic@gmx.net>, 2005 - 2006
 #  Christoph Berg <Christoph.Berg@kpm-sport.de>, 2005 - 2010
 #  Aaron Winter <winter.aaron93@gmail.com>, 2018
@@ -9,9 +9,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.14\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2018-05-26 12:04 UTC\n"
-"PO-Revision-Date: 2018-07-05 06:43+0200\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
+"POT-Creation-Date: 2018-09-16 07:03 UTC\n"
+"PO-Revision-Date: 2018-09-13 18:14+0200\n"
 "Last-Translator: Aaron Winter <winter.aaron93@gmail.com>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: de_DE\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.8\n"
+"X-Generator: Poedit 2.1.1\n"
 
 #. [generic_multiplayer]: id=user_map
 #: data/multiplayer/_main.cfg:8
@@ -105,13 +105,13 @@ msgstr ""
 "Diese Epoche ist noch in Entwicklung und wie die Heldenepoche unausgeglichen."
 
 #. [lua]: f
-#: data/multiplayer/eras.lua:61
+#: data/multiplayer/eras.lua:62
 msgid "<span strikethrough='true' foreground='#%02x%02x%02x'>Side %d</span>"
 msgstr ""
 "<span strikethrough='true' foreground='#%02x%02x%02x'>Spieler %d</span>"
 
 #. [lua]: f
-#: data/multiplayer/eras.lua:75
+#: data/multiplayer/eras.lua:76
 msgid ""
 "<span foreground='#%02x%02x%02x'>Side %d</span>:  Income score = %d  Unit "
 "score = %d  Gold = %d"
@@ -120,12 +120,17 @@ msgstr ""
 "Ergebnis Einheiten = %d Gold = %d"
 
 #. [lua]: f
-#: data/multiplayer/eras.lua:75
+#: data/multiplayer/eras.lua:76
 msgid "Grand total: <b>%d</b>"
 msgstr "Gesamtpunkte: <b>%d</b>"
 
 #. [lua]: f
-#: data/multiplayer/eras.lua:86
+#: data/multiplayer/eras.lua:93
+msgid "Sides %s and %d are tied."
+msgstr "Unentschieden zwischen Partei %s und %d."
+
+#. [lua]: f
+#: data/multiplayer/eras.lua:95
 msgid "<span foreground='%s'>Side %d</span> has the advantage."
 msgstr "<span foreground='%s'>Spieler %d</span> ist im Vorteil."
 
@@ -523,7 +528,7 @@ msgstr ""
 #: data/multiplayer/scenarios/2p_Fallenstar_Lake.cfg:35
 #: data/multiplayer/scenarios/2p_Ruined_Passage.cfg:40
 #: data/multiplayer/scenarios/2p_Silverhead_Crossing.cfg:32
-#: data/multiplayer/scenarios/2p_Tombs_of_Kesorak.cfg:60
+#: data/multiplayer/scenarios/2p_Tombs_of_Kesorak.cfg:107
 #: data/multiplayer/scenarios/3p_Alirok_Marsh.cfg:31
 #: data/multiplayer/scenarios/3p_Island_of_the_Horatii.cfg:31
 #: data/multiplayer/scenarios/3p_Morituri.cfg:31
@@ -557,7 +562,7 @@ msgstr "Ost"
 #: data/multiplayer/scenarios/2p_Fallenstar_Lake.cfg:24
 #: data/multiplayer/scenarios/2p_Ruined_Passage.cfg:24
 #: data/multiplayer/scenarios/2p_Silverhead_Crossing.cfg:21
-#: data/multiplayer/scenarios/2p_Tombs_of_Kesorak.cfg:72
+#: data/multiplayer/scenarios/2p_Tombs_of_Kesorak.cfg:119
 #: data/multiplayer/scenarios/3p_Alirok_Marsh.cfg:42
 #: data/multiplayer/scenarios/3p_Island_of_the_Horatii.cfg:42
 #: data/multiplayer/scenarios/3p_Morituri.cfg:42
@@ -1800,7 +1805,7 @@ msgstr "2S – Garnison der tausend Stiche"
 
 #. [multiplayer]: id=multiplayer_thousand_stings_garrison
 #: data/multiplayer/scenarios/2p_Thousand_Stings_Garrison.cfg:39
-msgid "A strange place. Designed by Doc Paterson"
+msgid "A strange place. Designed by Doc Paterson."
 msgstr "Ein wundersamer Ort. Von Doc Paterson."
 
 #. [side]
@@ -1895,7 +1900,7 @@ msgstr ""
 "diesen Ort entschieden."
 
 #. [note]
-#: data/multiplayer/scenarios/2p_Tombs_of_Kesorak.cfg:118
+#: data/multiplayer/scenarios/2p_Tombs_of_Kesorak.cfg:161
 msgid ""
 "The map contains mausoleums and campfires that shift the time of the day by "
 "one step toward night and day, respectively."
@@ -1904,7 +1909,7 @@ msgstr ""
 "Tageszeiten um jeweils einen Schritt in Richtung Tag und Nacht verändern."
 
 #. [note]
-#: data/multiplayer/scenarios/2p_Tombs_of_Kesorak.cfg:121
+#: data/multiplayer/scenarios/2p_Tombs_of_Kesorak.cfg:164
 msgid ""
 "The tile in the centre, which contains the casket of the titular "
 "necromancer, is always covered in pitch black fog."
@@ -1938,12 +1943,12 @@ msgstr "3S – Alirok Marschen"
 #. [multiplayer]: id=multiplayer_Castle_Hopping_Isle
 #. [multiplayer]: id=multiplayer_Clash
 #. [multiplayer]: id=multiplayer_4p_Hamlets
-#. [multiplayer]: id=multiplayer_Loris_River
 #. [multiplayer]: id=multiplayer_4p_Morituri
 #. [multiplayer]: id=multiplayer_Ruins_of_Terra-Dwelve
 #. [multiplayer]: id=multiplayer_4p_Underworld
 #. [multiplayer]: id=multiplayer_8p_Mokena_Prairie
 #. [multiplayer]: id=multiplayer_8p_Morituri
+#. [multiplayer]: id=multiplayer_Loris_River
 #: data/multiplayer/scenarios/3p_Alirok_Marsh.cfg:6
 #: data/multiplayer/scenarios/3p_Island_of_the_Horatii.cfg:6
 #: data/multiplayer/scenarios/3p_Morituri.cfg:6
@@ -2136,13 +2141,13 @@ msgstr "4S – Isars Kreuz"
 msgid ""
 "A very small 2 vs. 2 map. Close quarters fighting means the successful "
 "rotation of units and planning of moves is important. Teams set for players "
-"1+4 vs. 2+3 (northeast vs. southwest). Designed for 75 starting gold, 20 "
-"villages."
+"1 &amp; 4 vs. 2 &amp; 3 (northeast vs. southwest). Designed for 75 starting "
+"gold, 20 villages."
 msgstr ""
 "Eine sehr kleine 2-gegen-2-Karte mit 20 Dörfern. Durch die engen "
 "Verhältnisse auf dieser Karte ist sinnvolles Platzieren sowie gutes "
 "Manövrieren Eurer Einheiten von entscheidender Bedeutung. Vorgesehene "
-"Allianzen sind 1&amp;4 gegen 2&amp;3 (Nordosten gegen Südwesten).\n"
+"Allianzen sind 1 &amp; 4 gegen 2 &amp; 3 (Nordosten gegen Südwesten).\n"
 "Empfohlene Einstellung: 75 Goldstücke Startkapital."
 
 #. [side]
@@ -2229,10 +2234,10 @@ msgstr "4S – Der Lorisfluss"
 #: data/multiplayer/scenarios/4p_Loris_River.cfg:9
 msgid ""
 "2 vs. 2 map centered around a river with keeps in opposite corners. Designed "
-"for players 1+4 vs. 2+3. There are 28 villages."
+"for players 1 &amp; 4 vs. 2 &amp; 3. There are 28 villages."
 msgstr ""
 "Eine 25x25 Felder große 2-gegen-2-Karte, die um einen Fluss angesiedelt ist. "
-"Verbündete 1&amp;3 gegen 2&amp;4 streiten um die 28 Dörfer."
+"Verbündete 1 &amp; 3 gegen 2 &amp; 4 streiten um die 28 Dörfer."
 
 #. [multiplayer]: id=multiplayer_4p_Morituri
 #: data/multiplayer/scenarios/4p_Morituri.cfg:5
@@ -2260,10 +2265,12 @@ msgstr ""
 #: data/multiplayer/scenarios/4p_Paths_of_Daggers.cfg:9
 msgid ""
 "A 2 vs. 2 map with 5 separate paths of engagement. Balanced to be played "
-"east vs. west (1+4 vs. 2+3), but works well with any teams or FFA."
+"east vs. west (1 &amp; 4 vs. 2 &amp; 3), but works well with any teams or "
+"FFA."
 msgstr ""
 "Eine 2-gegen-2-Karte mit 28 Dörfern und fünf möglichen Wegen zum Sieg. "
-"Vorgesehen für Schlachten 1&amp;3 gegen 2&amp;4 (Osten gegen Westen)."
+"Vorgesehen für Schlachten 1 &amp; 3 gegen 2 &amp; 4 (Osten gegen Westen), "
+"aber auch FFA und andera Teamkombinationen sind geeignet."
 
 #. [multiplayer]: id=multiplayer_Ruins_of_Terra-Dwelve
 #: data/multiplayer/scenarios/4p_Ruins_of_Terra-Dwelve.cfg:6
