--- a/po/wesnoth-tb/de.po
+++ b/po/wesnoth-tb/de.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.14\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2018-05-26 12:04 UTC\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
+"POT-Creation-Date: 2018-09-09 08:38 UTC\n"
 "PO-Revision-Date: 2018-06-25 20:15+0200\n"
 "Last-Translator: Christoph Lange <christoph.t.lange@googlemail.com>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
