German Translation: small change in SoF
[ci skip]

--- a/po/wesnoth-sof/de.po
+++ b/po/wesnoth-sof/de.po
@@ -3702,7 +3702,7 @@ msgstr ""
 #. [message]: speaker=Guard Captain
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:117
 msgid "Enter, Alanin, and give the king your message."
-msgstr "Tretet ein, Alanin, und überbringt dem König eure Nachrichten."
+msgstr "Tretet ein, Alanin, und überbringt dem König eure Nachricht."
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:123
